[gd_scene load_steps=3 format=3 uid="uid://c1584iplg8kg5"]

[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/controls/VariableValueEditControl.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://f44ru47mc3pp" path="res://addons/hyh.cutscene_graph/editor/validation/ValidationWarning.tscn" id="2_j0s0b"]

[node name="VariableValueEdit" type="MarginContainer"]
anchors_preset = -1
anchor_right = 0.057
anchor_bottom = 0.067
offset_right = -0.368004
offset_bottom = -0.200001
size_flags_horizontal = 3
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="EditContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/EditContainer"]
visible = false
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="SpinBox" type="SpinBox" parent="HBoxContainer/EditContainer"]
visible = false
layout_mode = 2
allow_greater = true
allow_lesser = true
update_on_text_changed = true

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/EditContainer"]
layout_mode = 2

[node name="ValidationWarning" parent="HBoxContainer" instance=ExtResource("2_j0s0b")]
visible = false
layout_mode = 2

[connection signal="text_changed" from="HBoxContainer/EditContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="changed" from="HBoxContainer/EditContainer/SpinBox" to="." method="_on_SpinBox_changed"]
[connection signal="value_changed" from="HBoxContainer/EditContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="HBoxContainer/EditContainer/CheckBox" to="." method="_on_CheckBox_pressed"]
